Update to the latest published version of this interface.  Note that this interface is only used for the google address lookup, not the map-family page.

--- a/churchinfo/GoogleMapAPI/NEWS
+++ b/churchinfo/GoogleMapAPI/NEWS
@@ -1,3 +1,15 @@
+2.5
+---
+
+fix "from address" bug (Thomas Jackson, mohrt)
+
+2.4
+---
+
+fix a couple bugs with drawing the javascript map (drakos7,nmweb,mohrt)
+fix lat/lon decimal when locale uses a comma (mohrt, Rene Schmidt)
+fix javascript escapement errors (Greg Wilson, Jerome Combaz, mohrt)
+
 2.3
 ---
 
